--- a/moneybox-withdrawal-master/src/Moneybox.App.Tests/Moneybox.App.Tests.csproj
+++ b/moneybox-withdrawal-master/src/Moneybox.App.Tests/Moneybox.App.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
